# Sampo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
.github/workflows/: BuildCompileCMake-Win64-Release.yml
demo/: CMakeLists.txt
demo/data/assets/shaders/: flatcolor.glsl  texture.glsl
demo/src/: demo.cpp  demo_layer.cpp  demo_layer.hpp  demolayer.cpp  demolayer.hpp  main_win32.cpp  mathtests.cpp  mathtests.hpp  networktest.cpp  networktest.hpp  renderer2D_layer.cpp  renderer2D_layer.hpp
framework/: CMakeLists.txt
framework/include/: sampo.hpp  sampo_pch.hpp
framework/include/foundation/core/: application.cpp  application.hpp  core_definitions.hpp  entry_point.hpp  layer.cpp  layer.hpp
framework/include/foundation/math/: vector3.hpp  vector3_io.cpp  vector3_io.hpp
framework/sampo/: sampo.hpp  sampo_pch.hpp
framework/sampo/core/: application.cpp  core_definitions.hpp  layer.cpp  layer.hpp
framework/sampo/debugging/: new_tracker.hpp
framework/sampo/io/: file_system.hpp
framework/sampo/math/: vector3.hpp  vector3_io.cpp
framework/sampo/platform/windows/io/: windows_file_systems.cpp
framework/src/: sampo_pch.hpp
framework/src/platform/windows/io/: windows_file_system.cpp  windows_string_helper.hpp
framework/src/platform/windows/network/: windows_socket_address.hpp  windows_socket_address_factory.hpp  windows_socket_api.cpp  windows_socket_util.hpp  windows_tcp_socket.cpp  windows_tcp_socket.hpp  windows_udp_socket.hpp
framework/src/sampo/core/: application.cpp  application.hpp  assert.hpp  console_arguments.cpp  console_arguments.hpp  core_definitions.hpp  datatypes.hpp  entry_point.hpp  layer.cpp  log.cpp  platforms.hpp
framework/src/sampo/io/: file_states.hpp  file_system.hpp
framework/src/sampo/math/: vector3.hpp  vector3_io.cpp
framework/src/sampo/memory/: allocator_pmr.cpp  allocator_pmr.hpp  callocator.cpp  callocator.hpp  memory_benchmark.hpp
framework/src/sampo/network/: network_core.hpp  network_definitions.hpp  socket_address_factory.hpp  socket_api.cpp  socket_util.hpp  udp_socket.hpp
rakas/ballpit/: ballpit.vcxproj  main.cpp
rakas/engine/: engine.vcxproj  engine.vcxproj.filters
rakas/rakas/: rakas.vcxproj
sampo/: CMakeLists.txt
sampo/src/: sampo.hpp  sampo_pch.cpp  sampo_pch.hpp
sampo/src/platform/: platform_definitions.hpp
sampo/src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
sampo/src/platform/windows/: game_win32.hpp
sampo/src/platform/windows/core/: platform_win32.cpp  platform_win32.hpp
sampo/src/platform/windows/graphics/: window_win32.cpp  window_win32.hpp
sampo/src/platform/windows/input/: gamepad_win32.cpp  input_win32.cpp  input_win32.hpp  keyboard_win32.cpp  mouse_win32.cpp
sampo/src/platform/windows/network/: windows_socket_api.hpp  windows_udp_socket.cpp
sampo/src/sampo/core/: application.cpp  application.hpp  assert.hpp  console_arguments.cpp  console_arguments.hpp  core_definitions.hpp  datatypes.hpp  game.cpp  game.hpp  layer.hpp  log.cpp  log.hpp  platform.hpp  platform_types.hpp  platforms.hpp  timestep.hpp
sampo/src/sampo/debugging/: imgui_layer.cpp  imgui_layer.hpp  new_tracker.hpp
sampo/src/sampo/events/: application_event.hpp  event.hpp  gamepad_event.hpp  key_event.hpp  mouse_event.hpp
sampo/src/sampo/graphics/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  graphics_context.hpp  render_command.cpp  render_command.hpp  renderer.cpp  renderer.hpp  renderer2D.cpp  renderer2D.hpp  renderer_api.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  window.hpp
sampo/src/sampo/input/: gamepad.cpp  gamepad.hpp  input.cpp  input.hpp  input_device.hpp  input_mapping.hpp  input_types.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  orthographic_camera_controller.cpp  orthographic_camera_controller.hpp
sampo/src/sampo/memory/: allocator.hpp  linear_allocator.cpp  linear_allocator.hpp  memory_benchmark.cpp
sampo/src/sampo/network/: socket.hpp  socket_address.hpp  socket_address_factory.hpp  socket_api.cpp  socket_api.hpp  socket_util.hpp  tcp_socket.hpp
source/core/: core_defines.h  data_type.h  engine.cpp  engine.h  game.h  operation_result.h  primitive_defines.h
tcp_chatclient/: CMakeLists.txt  client.cpp
tcp_chatserver/: CMakeLists.txt  server.cpp
